--- a/apps.json
+++ b/apps.json
@@ -1,16 +1,8 @@
 [
     {
-      "url": "https://github.com/frappe/erpnext",
+      "url": "https://github.com/alibahadirabra/nocode",
       "branch": "version-15"
-    },
-    {
-      "url": "https://github.com/frappe/payments",
-      "branch": "version-15"
-    },
-    {
-      "url": "https://github.com/frappe/hrms",
-      "branch": "version-15"
-    }
+    } 
 
    
 ]
