--- a/development/apps-example.json
+++ b/development/apps-example.json
@@ -1,6 +1,6 @@
 [
   {
-    "url": "https://github.com/frappe/erpnext.git",
+    "url": "https://github.com/alibahadirabra/nocode.git",
     "branch": "version-15"
   }
 ]
