--- a/apps.json
+++ b/apps.json
@@ -1,8 +1,20 @@
 [
     {
+      "url": "https://github.com/frappe/erpnext",
+      "branch": "version-15"
+    },
+    {
+      "url": "https://github.com/frappe/payments",
+      "branch": "version-15"
+    },
+    {
+      "url": "https://github.com/frappe/hrms",
+      "branch": "version-15"
+    },
+    {
       "url": "https://github.com/alibahadirabra/nocode",
       "branch": "version-15"
-    } 
+    }
 
    
 ]
